<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="camera_activity_permission_denied_toast">Please go to app settings and grant camera permission</string>

    <string name="finding_rect">I can\'t see a sheet</string>
    <string name="place_sheet">Point to a sheet</string>
    <string name="move_away">Move away</string>
    <string name="move_closer">Move closer</string>
    <string name="adjust_angle">Adjust angle</string>
    <string name="hold_still">Hold still</string>
    <string name="capturing">Capturing image</string>
    <string name="timer_text">(%1$d s)</string>

    <!--Button labels-->
    <string name="xray">X-Ray On</string>
    <string name="normal">X-Ray Off</string>
    <string name="canny_on">Canny</string>
    <string name="canny_off">No Canny</string>
    <string name="morph_on">Morph</string>
    <string name="morph_off">No Morph</string>
    <string name="thresh_on">Thresh</string>
    <string name="thresh_off">No Thresh</string>

</resources>