<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_scan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adityaarora.liveedgedetection.activity.ScanActivity">

    <!-- First layer: camera preview-->
    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Debug Button: effects preview -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginBottom="20dp"
        android:gravity="center">

    <ToggleButton
        android:id="@+id/xray_btn"
        android:textOn="@string/xray"
        android:textOff="@string/normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ToggleButton
        android:id="@+id/canny_btn"
        android:textOn="@string/canny_on"
        android:textOff="@string/canny_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ToggleButton
        android:id="@+id/morph_btn"
        android:textOn="@string/morph_on"
        android:textOff="@string/morph_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ToggleButton
        android:id="@+id/thresh_btn"
        android:textOn="@string/thresh_on"
        android:textOff="@string/thresh_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>
    <!-- Second (Hidden) layer: crop layout-->
    <FrameLayout
        android:id="@+id/crop_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/crop_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <!--<com.adityaarora.liveedgedetection.view.PolygonView-->
            <!--android:id="@+id/polygon_view"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/crop_accept_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:alpha="0.8"
                android:src="@drawable/accept" />

                <TextView
                    android:id="@+id/time_elapsed_text"
                    style="@style/TextShadow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:paddingBottom="4dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/finding_rect"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/text_size_18" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6" />

            <ImageView
                android:id="@+id/crop_reject_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:alpha="0.8"
                android:src="@drawable/reject" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/capture_hint_layout"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:background="@drawable/hint_white"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/capture_hint_text"
            style="@style/TextShadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/finding_rect"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>
</FrameLayout>
